Made additional changes to Evolve service class