@@ -1,8 +1,8 @@
 package com.box.l10n.mojito.service.evolve;
 
-import static com.box.l10n.mojito.evolve.TranslationStatusType.IN_TRANSLATION;
-import static com.box.l10n.mojito.evolve.TranslationStatusType.READY_FOR_TRANSLATION;
-import static com.box.l10n.mojito.evolve.TranslationStatusType.TRANSLATED;
+import static com.box.l10n.mojito.service.evolve.dto.TranslationStatusType.IN_TRANSLATION;
+import static com.box.l10n.mojito.service.evolve.dto.TranslationStatusType.READY_FOR_TRANSLATION;
+import static com.box.l10n.mojito.service.evolve.dto.TranslationStatusType.TRANSLATED;
 import static com.box.l10n.mojito.service.security.user.UserService.SYSTEM_USERNAME;
 import static java.util.Optional.ofNullable;
 
@@ -13,10 +13,6 @@ import com.box.l10n.mojito.entity.Branch;
 import com.box.l10n.mojito.entity.BranchStatistic;
 import com.box.l10n.mojito.entity.Repository;
 import com.box.l10n.mojito.entity.RepositoryLocale;
-import com.box.l10n.mojito.evolve.CourseDTO;
-import com.box.l10n.mojito.evolve.CoursesGetRequest;
-import com.box.l10n.mojito.evolve.EvolveClient;
-import com.box.l10n.mojito.evolve.EvolveConfigurationProperties;
 import com.box.l10n.mojito.okapi.InheritanceMode;
 import com.box.l10n.mojito.okapi.Status;
 import com.box.l10n.mojito.okapi.asset.UnsupportedAssetFilterTypeException;
@@ -28,18 +24,29 @@ import com.box.l10n.mojito.service.assetcontent.AssetContentRepository;
 import com.box.l10n.mojito.service.branch.BranchRepository;
 import com.box.l10n.mojito.service.branch.BranchService;
 import com.box.l10n.mojito.service.branch.BranchStatisticRepository;
+import com.box.l10n.mojito.service.evolve.dto.CourseDTO;
 import com.box.l10n.mojito.service.pollableTask.PollableFuture;
 import com.box.l10n.mojito.service.pollableTask.PollableTaskService;
 import com.box.l10n.mojito.service.repository.RepositoryService;
 import com.box.l10n.mojito.service.tm.TMService;
 import com.box.l10n.mojito.xliff.XliffUtils;
 import com.google.common.base.Preconditions;
+import com.google.common.collect.ImmutableList;
+import java.io.IOException;
+import java.time.Duration;
 import java.time.ZonedDateTime;
 import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
+import java.util.concurrent.ExecutionException;
+import javax.xml.parsers.ParserConfigurationException;
+import javax.xml.transform.TransformerException;
+import javax.xml.xpath.XPathExpressionException;
+import org.xml.sax.SAXException;
+import reactor.core.publisher.Mono;
+import reactor.util.retry.Retry;
 
 public class EvolveService {
   private List<RepositoryLocale> targetRepositoryLocales;
@@ -51,8 +58,6 @@ public class EvolveService {
   private Set<String> additionalTargetLocaleBcp47Tags;
 
   private ZonedDateTime earliestUpdatedOn;
-
-  private ZonedDateTime currentEarliestUpdatedOn;
 
   private Repository repository;
 
@@ -82,6 +87,8 @@ public class EvolveService {
 
   private final AssetExtractionByBranchRepository assetExtractionByBranchRepository;
 
+  private final SyncDateService syncDateService;
+
   public EvolveService(
       EvolveConfigurationProperties evolveConfigurationProperties,
       RepositoryService repositoryService,
@@ -94,7 +101,8 @@ public class EvolveService {
       AssetContentRepository assetContentRepository,
       TMService tmService,
       BranchService branchService,
-      AssetExtractionByBranchRepository assetExtractionByBranchRepository) {
+      AssetExtractionByBranchRepository assetExtractionByBranchRepository,
+      SyncDateService syncDateService) {
     this.evolveConfigurationProperties = evolveConfigurationProperties;
     this.repositoryService = repositoryService;
     this.evolveClient = evolveClient;
@@ -107,6 +115,7 @@ public class EvolveService {
     this.tmService = tmService;
     this.branchService = branchService;
     this.assetExtractionByBranchRepository = assetExtractionByBranchRepository;
+    this.syncDateService = syncDateService;
   }
 
   private void setLocales() {
@@ -129,128 +138,187 @@ public class EvolveService {
     }
   }
 
-  private SourceAsset importSourceAsset(SourceAsset sourceAsset) {
+  private SourceAsset importSourceAsset(SourceAsset sourceAsset)
+      throws UnsupportedAssetFilterTypeException, ExecutionException, InterruptedException {
     Preconditions.checkNotNull(sourceAsset);
 
     String normalizedContent = NormalizationUtils.normalize(sourceAsset.getContent());
     PollableFuture<Asset> assetFuture;
-    try {
-      assetFuture =
-          this.assetService.addOrUpdateAssetAndProcessIfNeeded(
-              sourceAsset.getRepositoryId(),
-              sourceAsset.getPath(),
-              normalizedContent,
-              sourceAsset.isExtractedContent(),
-              sourceAsset.getBranch(),
-              sourceAsset.getBranchCreatedByUsername(),
-              sourceAsset.getBranchNotifiers(),
-              null,
-              sourceAsset.getFilterConfigIdOverride(),
-              sourceAsset.getFilterOptions());
-      sourceAsset.setAddedAssetId(assetFuture.get().getId());
-    } catch (Exception e) {
-      throw new RuntimeException(e.getMessage(), e);
-    }
-
+    assetFuture =
+        this.assetService.addOrUpdateAssetAndProcessIfNeeded(
+            sourceAsset.getRepositoryId(),
+            sourceAsset.getPath(),
+            normalizedContent,
+            sourceAsset.isExtractedContent(),
+            sourceAsset.getBranch(),
+            sourceAsset.getBranchCreatedByUsername(),
+            sourceAsset.getBranchNotifiers(),
+            null,
+            sourceAsset.getFilterConfigIdOverride(),
+            sourceAsset.getFilterOptions());
+    sourceAsset.setAddedAssetId(assetFuture.get().getId());
     sourceAsset.setPollableTask(assetFuture.getPollableTask());
     return sourceAsset;
   }
 
-  private String getBranchName(int courseId) {
-    return String.format("course_%d", courseId);
+  String getBranchName(int courseId) {
+    return String.format("evolve/course_%d", courseId);
   }
 
-  private String getAssetPath(int courseId) {
+  String getAssetPath(int courseId) {
     return String.format("%d.xliff", courseId);
   }
 
-  private void startCourseTranslations(int courseId) {
-    String localizedAssetContent =
-        this.evolveClient.startCourseTranslation(
-            courseId, this.targetLocaleBcp47Tag, this.additionalTargetLocaleBcp47Tags);
+  private void importSourceAsset(int courseId, String localizedAssetContent)
+      throws XPathExpressionException,
+          ParserConfigurationException,
+          IOException,
+          TransformerException,
+          SAXException,
+          UnsupportedAssetFilterTypeException,
+          ExecutionException,
+          InterruptedException {
     SourceAsset sourceAsset = new SourceAsset();
     sourceAsset.setBranch(this.getBranchName(courseId));
     sourceAsset.setRepositoryId(this.repository.getId());
     sourceAsset.setPath(this.getAssetPath(courseId));
     sourceAsset.setBranchCreatedByUsername(SYSTEM_USERNAME);
-    try {
-      sourceAsset.setContent(
-          this.xliffUtils.removeAttribute(localizedAssetContent, "target-language"));
-      this.pollableTaskService.waitForPollableTask(
-          this.importSourceAsset(sourceAsset).getPollableTask().getId(), timeout * 1000, 10000);
-    } catch (Exception e) {
-      throw new RuntimeException(e.getMessage(), e);
-    }
+    sourceAsset.setContent(
+        this.xliffUtils.removeAttribute(localizedAssetContent, "target-language"));
+    this.pollableTaskService.waitForPollableTask(
+        this.importSourceAsset(sourceAsset).getPollableTask().getId(), timeout * 1000, 10000);
+  }
+
+  private int getMaxRetries() {
+    return ofNullable(this.evolveConfigurationProperties.getMaxRetries()).orElse(2);
+  }
+
+  private Duration getRetryMinBackoff() {
+    return ofNullable(this.evolveConfigurationProperties.getRetryMinBackoffSecs())
+        .map(Duration::ofSeconds)
+        .orElse(Duration.ofSeconds(2));
+  }
+
+  private Duration getRetryMaxBackoff() {
+    return ofNullable(this.evolveConfigurationProperties.getRetryMaxBackoffSecs())
+        .map(Duration::ofSeconds)
+        .orElse(Duration.ofSeconds(30));
+  }
+
+  private void startCourseTranslations(int courseId)
+      throws XPathExpressionException,
+          UnsupportedAssetFilterTypeException,
+          ParserConfigurationException,
+          IOException,
+          ExecutionException,
+          InterruptedException,
+          TransformerException,
+          SAXException {
+    String localizedAssetContent =
+        Mono.fromCallable(
+                () ->
+                    this.evolveClient.startCourseTranslation(
+                        courseId, this.targetLocaleBcp47Tag, this.additionalTargetLocaleBcp47Tags))
+            .retryWhen(
+                Retry.backoff(this.getMaxRetries(), this.getRetryMinBackoff())
+                    .maxBackoff(this.getRetryMaxBackoff()))
+            .doOnError(
+                e -> {
+                  throw new RuntimeException("Error while starting a course translation", e);
+                })
+            .block();
+    this.importSourceAsset(courseId, localizedAssetContent);
   }
 
   private void updateCourse(CourseDTO courseDTO, ZonedDateTime currentDateTime) {
     Preconditions.checkNotNull(courseDTO);
 
-    this.evolveClient.updateCourse(
-        courseDTO.getId(), courseDTO.getTranslationStatus(), currentDateTime);
+    Mono.fromRunnable(
+            () ->
+                this.evolveClient.updateCourse(
+                    courseDTO.getId(), courseDTO.getTranslationStatus(), currentDateTime))
+        .retryWhen(
+            Retry.backoff(this.getMaxRetries(), this.getRetryMinBackoff())
+                .maxBackoff(this.getRetryMaxBackoff()))
+        .doOnError(
+            e -> {
+              throw new RuntimeException("Error while updating a course", e);
+            })
+        .block();
   }
 
-  private void importSourceAssetToMaster(CourseDTO courseDTO, AssetContent assetContent) {
+  private void importSourceAssetToMaster(CourseDTO courseDTO, AssetContent assetContent)
+      throws UnsupportedAssetFilterTypeException, ExecutionException, InterruptedException {
     SourceAsset sourceAsset = new SourceAsset();
     sourceAsset.setRepositoryId(this.repository.getId());
     sourceAsset.setPath(this.getAssetPath(courseDTO.getId()));
     sourceAsset.setBranchCreatedByUsername(SYSTEM_USERNAME);
     sourceAsset.setContent(assetContent.getContent());
-    try {
-      this.pollableTaskService.waitForPollableTask(
-          this.importSourceAsset(sourceAsset).getPollableTask().getId(), timeout * 1000, 10000);
-    } catch (Throwable e) {
-      throw new RuntimeException(e.getMessage(), e);
-    }
+    this.pollableTaskService.waitForPollableTask(
+        this.importSourceAsset(sourceAsset).getPollableTask().getId(), timeout * 1000, 10000);
   }
 
   private void updateCourseTranslations(int courseId, Asset asset, AssetContent assetContent) {
     String normalizedContent = NormalizationUtils.normalize(assetContent.getContent());
     this.targetRepositoryLocales.forEach(
         repositoryLocale -> {
+          String generateLocalized;
           try {
-            String generateLocalized =
+            generateLocalized =
                 tmService.generateLocalized(
                     asset,
                     normalizedContent,
                     repositoryLocale,
                     repositoryLocale.getLocale().getBcp47Tag(),
                     null,
-                    List.of(),
+                    ImmutableList.of(),
                     Status.ACCEPTED,
                     InheritanceMode.USE_PARENT,
                     null);
-            this.evolveClient.updateCourseTranslation(courseId, generateLocalized);
           } catch (UnsupportedAssetFilterTypeException e) {
-            throw new RuntimeException(e);
+            throw new RuntimeException(e.getMessage(), e);
           }
+          Mono.fromRunnable(
+                  () -> this.evolveClient.updateCourseTranslation(courseId, generateLocalized))
+              .retryWhen(
+                  Retry.backoff(this.getMaxRetries(), this.getRetryMinBackoff())
+                      .maxBackoff(this.getRetryMaxBackoff()))
+              .doOnError(
+                  e -> {
+                    throw new RuntimeException("Error while updating course translation", e);
+                  })
+              .block();
         });
   }
 
-  private void deleteBranch(long branchId) {
+  private void deleteBranch(long branchId) throws InterruptedException {
     PollableFuture<Void> pollableFuture =
         this.branchService.asyncDeleteBranch(this.repository.getId(), branchId);
-    try {
-      this.pollableTaskService.waitForPollableTask(
-          pollableFuture.getPollableTask().getId(), timeout * 1000, 10000);
-    } catch (InterruptedException e) {
-      throw new RuntimeException(e);
-    }
+    this.pollableTaskService.waitForPollableTask(
+        pollableFuture.getPollableTask().getId(), timeout * 1000, 10000);
   }
 
   private void setCurrentEarliestUpdatedOn(ZonedDateTime updatedOn) {
-    if (this.currentEarliestUpdatedOn == null || this.currentEarliestUpdatedOn.isAfter(updatedOn)) {
-      this.currentEarliestUpdatedOn = updatedOn;
+    if (this.earliestUpdatedOn == null || this.earliestUpdatedOn.isAfter(updatedOn)) {
+      this.earliestUpdatedOn = updatedOn;
     }
   }
 
   private String getContentMd5(Asset asset, Branch branch) {
-    AssetExtractionByBranch assetExtractionByBranch =
-        assetExtractionByBranchRepository.findByAssetAndBranch(asset, branch).get();
-    return assetExtractionByBranch.getAssetExtraction().getContentMd5();
+    Optional<AssetExtractionByBranch> assetExtractionByBranch =
+        assetExtractionByBranchRepository.findByAssetAndBranch(asset, branch);
+    if (assetExtractionByBranch.isPresent()) {
+      return assetExtractionByBranch.get().getAssetExtraction().getContentMd5();
+    } else {
+      throw new RuntimeException(
+          String.format(
+              "Asset Extraction not found for asset ID: %d and branch: %s",
+              asset.getId(), branch.getName()));
+    }
   }
 
-  private void syncTranslated(CourseDTO courseDTO, Branch branch, ZonedDateTime startDateTime) {
+  private void syncTranslated(CourseDTO courseDTO, Branch branch, ZonedDateTime startDateTime)
+      throws UnsupportedAssetFilterTypeException, ExecutionException, InterruptedException {
     Asset asset =
         this.assetService
             .findAll(
@@ -279,26 +347,35 @@ public class EvolveService {
     }
   }
 
-  private void syncReadyForTranslation(CourseDTO courseDTO, ZonedDateTime startDateTime) {
+  private void syncReadyForTranslation(CourseDTO courseDTO, ZonedDateTime startDateTime)
+      throws XPathExpressionException,
+          UnsupportedAssetFilterTypeException,
+          ParserConfigurationException,
+          IOException,
+          ExecutionException,
+          InterruptedException,
+          TransformerException,
+          SAXException {
     this.startCourseTranslations(courseDTO.getId());
     courseDTO.setTranslationStatus(IN_TRANSLATION);
     this.updateCourse(courseDTO, startDateTime);
-    this.setCurrentEarliestUpdatedOn(courseDTO.getUpdatedOn());
+    this.setCurrentEarliestUpdatedOn(startDateTime);
   }
 
-  private void syncInTranslation(CourseDTO courseDTO, ZonedDateTime startDateTime) {
+  private void syncInTranslation(CourseDTO courseDTO, ZonedDateTime startDateTime)
+      throws UnsupportedAssetFilterTypeException, ExecutionException, InterruptedException {
     Branch branch =
         this.branchRepository.findByNameAndRepository(
             this.getBranchName(courseDTO.getId()), this.repository);
     BranchStatistic branchStatistic = this.branchStatisticRepository.findByBranch(branch);
-    if (branchStatistic.getTotalCount() > 0) {
+    if (branchStatistic == null || branchStatistic.getTotalCount() == 0) {
+      this.setCurrentEarliestUpdatedOn(courseDTO.getUpdatedOn());
+    } else if (branchStatistic.getTotalCount() > 0) {
       if (branchStatistic.getForTranslationCount() == 0) {
         this.syncTranslated(courseDTO, branch, startDateTime);
       } else {
         this.setCurrentEarliestUpdatedOn(courseDTO.getUpdatedOn());
       }
-    } else {
-      this.deleteBranch(branch.getId());
     }
   }
 
@@ -315,22 +392,23 @@ public class EvolveService {
     this.setLocales();
     ZonedDateTime startDateTime = ZonedDateTime.now();
     CoursesGetRequest request =
-        new CoursesGetRequest(this.sourceLocaleBcp47Tag, this.earliestUpdatedOn, startDateTime);
+        new CoursesGetRequest(
+            this.sourceLocaleBcp47Tag, this.syncDateService.getDate(), startDateTime);
     this.evolveClient
         .getCourses(request)
         .forEach(
             courseDTO -> {
-              if (courseDTO.getTranslationStatus() == READY_FOR_TRANSLATION) {
-                this.syncReadyForTranslation(courseDTO, startDateTime);
-              } else if (courseDTO.getTranslationStatus() == IN_TRANSLATION) {
-                this.syncInTranslation(courseDTO, startDateTime);
+              try {
+                if (courseDTO.getTranslationStatus() == READY_FOR_TRANSLATION) {
+                  this.syncReadyForTranslation(courseDTO, startDateTime);
+                } else if (courseDTO.getTranslationStatus() == IN_TRANSLATION) {
+                  this.syncInTranslation(courseDTO, startDateTime);
+                }
+              } catch (Exception e) {
+                throw new RuntimeException(e.getMessage(), e);
               }
             });
-    this.earliestUpdatedOn = ofNullable(this.currentEarliestUpdatedOn).orElse(startDateTime);
-  }
-
-  public ZonedDateTime getEarliestUpdatedOn() {
-    return earliestUpdatedOn;
+    this.syncDateService.setDate(ofNullable(this.earliestUpdatedOn).orElse(startDateTime));
   }
 
   public List<RepositoryLocale> getRepositoryLocales() {
